--- a/pms.app/Components/Pages/CustomerPages/Details.razor
+++ b/pms.app/Components/Pages/CustomerPages/Details.razor
@@ -113,7 +113,7 @@
         // Set up includeProperties
         string includeProperties = "CustomerItems,CustomerItems.Item";
 
-        // Set up pagination
+        // Set up pagination to max 500 records, out-of-scope
         int page = 1;
         int pageSize = 500;
 
