--- a/pms.app/Components/Pages/CustomerPages/Index.razor
+++ b/pms.app/Components/Pages/CustomerPages/Index.razor
@@ -76,7 +76,7 @@
         // Set up includeProperties
         string includeProperties = "";
 
-        // Set up pagination
+        // Set up pagination to max 500 records, out-of-scope
         int page = 1;
         int pageSize = 500;
 
