--- a/pms.app/Components/Pages/ItemPages/Delete.razor
+++ b/pms.app/Components/Pages/ItemPages/Delete.razor
@@ -10,64 +10,75 @@
 @attribute [Authorize]
 <PageTitle>Delete</PageTitle>
 
-<h1>Delete</h1>
+<div class="card">
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Item</h4>
-    <hr />
-    @if (item is null)
-    {
-        <p><em>Loading...</em></p>
-    }
-    else
-    {
-        <dl class="row">
-            <dt class="col-sm-2">SKU</dt>
-            <dd class="col-sm-10">@item.SKU</dd>
-        </dl>
-        <dl class="row">
-            <dt class="col-sm-2">Name</dt>
-            <dd class="col-sm-10">@item.Name</dd>
-        </dl>
-        <dl class="row">
-            <dt class="col-sm-2">Description</dt>
-            <dd class="col-sm-10">@item.Description</dd>
-        </dl>
-        <dl class="row">
-            <dt class="col-sm-2">Price</dt>
-            <dd class="col-sm-10">@item.Price</dd>
-        </dl>
-        <dl class="row">
-            <dt class="col-sm-2">Status</dt>
-            <dd class="col-sm-10">@item.Status</dd>
-        </dl>
+    <div class="card-header text-white bg-primary">
+        <h4>Delete Item</h4>
+    </div>
 
-        @if (item.Category != null)
-        {
-            <dl class="row">
-                <dt class="col-sm-2">Category Id</dt>
-                <dd class="col-sm-10">@item.CategoryId</dd>
-            </dl>
-            <dl class="row">
-                <dt class="col-sm-2">Category Name</dt>
-                <dd class="col-sm-10">@item.Category.Name</dd>
-            </dl>
-        }
-        <dl class="row">
-            <dt class="col-sm-2">Created</dt>
-            <dd class="col-sm-10">@item.Created</dd>
-        </dl>
-        <dl class="row">
-            <dt class="col-sm-2">Updated</dt>
-            <dd class="col-sm-10">@item.Updated</dd>
-        </dl>
-        <EditForm method="post" Model="item" OnValidSubmit="DeleteItem" FormName="delete" Enhance>
-            <button type="submit" class="btn btn-danger" disabled="@(item is null)">Delete</button> |
-            <a href="/items">Back to List</a>
-        </EditForm>
-    }
+    <div class="card-body">
+        <div class="row">
+            <div class="col-md-12">
+                @if (item is null)
+                {
+                    <p><em>Loading...</em></p>
+                }
+                else
+                {
+                    <dl class="row">
+                        <dt class="col-sm-2">SKU</dt>
+                        <dd class="col-sm-10">@item.SKU</dd>
+                    </dl>
+                    <dl class="row">
+                        <dt class="col-sm-2">Name</dt>
+                        <dd class="col-sm-10">@item.Name</dd>
+                    </dl>
+                    <dl class="row">
+                        <dt class="col-sm-2">Description</dt>
+                        <dd class="col-sm-10">@item.Description</dd>
+                    </dl>
+                    <dl class="row">
+                        <dt class="col-sm-2">Price</dt>
+                        <dd class="col-sm-10">@item.Price</dd>
+                    </dl>
+                    <dl class="row">
+                        <dt class="col-sm-2">Status</dt>
+                        <dd class="col-sm-10">@item.Status</dd>
+                    </dl>
+
+                    @if (item.Category != null)
+                    {
+                        <dl class="row">
+                            <dt class="col-sm-2">Category Id</dt>
+                            <dd class="col-sm-10">@item.CategoryId</dd>
+                        </dl>
+                        <dl class="row">
+                            <dt class="col-sm-2">Category Name</dt>
+                            <dd class="col-sm-10">@item.Category.Name</dd>
+                        </dl>
+                    }
+                    <dl class="row">
+                        <dt class="col-sm-2">Created</dt>
+                        <dd class="col-sm-10">@item.Created</dd>
+                    </dl>
+                    <dl class="row">
+                        <dt class="col-sm-2">Updated</dt>
+                        <dd class="col-sm-10">@item.Updated</dd>
+                    </dl>
+                    <EditForm method="post" Model="item" OnValidSubmit="DeleteItem" FormName="delete" Enhance>
+                        <button type="submit" class="btn btn-sm btn-danger" disabled="@(item is null)">Delete</button> |
+                        <a href="/items" class="btn btn-sm btn-secondary">Back to List</a>
+                    </EditForm>
+                }
+            </div>
+        </div>
+    </div>
+
 </div>
+
+
+
+
 
 @code {
     Item? item;
@@ -86,7 +97,7 @@
         // Set up includeProperties
         string includeProperties = "Category";
 
-        // Set up pagination
+        // Set up pagination to max 500 records, out-of-scope
         int page = 1;
         int pageSize = 500;
 
