--- a/pms.app/Components/Pages/ReportPages/CustomerExpensiveItemsReport.razor
+++ b/pms.app/Components/Pages/ReportPages/CustomerExpensiveItemsReport.razor
@@ -11,45 +11,57 @@
 
 @rendermode InteractiveServer
 
-<h1>Customers with X Most Expensive Items Report</h1>
+<div class="card">
 
-<div class="form-group row">
-    <label for="numberOfItems" class="col-sm-2 col-form-label">Number of Items:</label>
-    <div class="col-sm-2">
-        <input type="number" class="form-control" id="numberOfItems" @bind="numberOfItems" />
+    <div class="card-header text-white bg-primary">
+        <h4>Customers with X Most Expensive Items Report</h4>
     </div>
-    <div class="col-sm-2">
-        <button class="btn btn-primary" @onclick="GenerateReport">Generate Report</button>
-    </div>
-</div>
+    <div class="card-body">
+        <div class="row">
+            <div class="col-md-12"></div>
 
-@if (customerItemsWithExpensiveItems != null)
-{
-    <table class="table table-striped">
-        <thead class="thead-dark">
-            <tr>
-                <th>Customer Name</th>
-                <th>Expensive Items</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var customerItem in customerItemsWithExpensiveItems)
+            <div class="form-group row">
+                <label for="numberOfItems" class="col-sm-2 col-form-label">Number of Items:</label>
+                <div class="col-sm-2">
+                    <input type="number" class="form-control" id="numberOfItems" @bind="numberOfItems" />
+                </div>
+                <div class="col-sm-2">
+                    <button class="btn btn-primary" @onclick="GenerateReport">Generate Report</button>
+                </div>
+            </div>
+
+
+            @if (customerItemsWithExpensiveItems != null)
             {
-                <tr>
-                    <td>@customerItem.Customer.Name</td>
-                    <td>
-                        <ul>
-                            @foreach (var item in customerItem.MostExpensiveItems)
-                            {
-                                <li>@item.Name - @item.Price.ToString("C")</li>
-                            }
-                        </ul>
-                    </td>
-                </tr>
+                <table class="table table-striped">
+                    <thead class="thead-dark">
+                        <tr>
+                            <th>Customer Name</th>
+                            <th>Expensive Items</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var customerItem in customerItemsWithExpensiveItems)
+                        {
+                            <tr>
+                                <td>@customerItem.Customer.Name</td>
+                                <td>
+                                    <ul>
+                                        @foreach (var item in customerItem.MostExpensiveItems)
+                                        {
+                                            <li>@item.Name - @item.Price.ToString("C")</li>
+                                        }
+                                    </ul>
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
             }
-        </tbody>
-    </table>
-}
+        </div>
+    </div>
+
+</div>
 
 @code {
     private int numberOfItems;
