--- a/pms.app/Components/Pages/CategoryPages/Index.razor
+++ b/pms.app/Components/Pages/CategoryPages/Index.razor
@@ -23,7 +23,7 @@
                 <a href="categories/create" class="btn btn-primary">Add Category</a>
             </p>
 
-            <table class="table pmsTable">
+            <table class="table table-striped">
                 <thead>
                     <tr>
                         <th>Name</th>
@@ -69,7 +69,7 @@
         // Set up includeProperties
         string includeProperties = "";
 
-        // Set up pagination
+        // Set up pagination to max 500 records, out-of-scope
         int page = 1;
         int pageSize = 500;
 
