--- a/pms.app/Components/Pages/CustomerPages/Index.razor
+++ b/pms.app/Components/Pages/CustomerPages/Index.razor
@@ -23,7 +23,7 @@
                     <a href="customers/create" class="btn btn-primary">Add New</a>
                 </p>
 
-                <table class="table">
+                <table class="table table-striped">
                     <thead>
                         <tr>
                             <th>Name</th>
