--- a/pms.app/Components/Pages/ItemPages/Details.razor
+++ b/pms.app/Components/Pages/ItemPages/Details.razor
@@ -55,7 +55,7 @@
                     </div>
 
                     <h5>Item Customers</h5>
-                    <table class="table">
+                    <table class="table table-striped">
                         <thead>
                             <tr>
                                 <th>Customer Name</th>
