--- a/pms.app/Components/Pages/ItemPages/Index.razor
+++ b/pms.app/Components/Pages/ItemPages/Index.razor
@@ -22,7 +22,7 @@
                 <p>
                     <a href="items/create" class="btn btn-primary">Add New</a>
                 </p>
-                <table class="table">
+                <table class="table table-striped">
                     <thead>
                         <tr>
                             <th>Item Number (SKU)</th>
