--- a/pms.app/Components/Pages/CustomerPages/Delete.razor
+++ b/pms.app/Components/Pages/CustomerPages/Delete.razor
@@ -28,35 +28,35 @@
                 else
                 {
                     <dl class="row">
-                        <dt class="col-sm-2">Name</dt>
+                        <dt class="col-sm-2 font-weight-bold">Name:</dt>
                         <dd class="col-sm-10">@customer.Name</dd>
                     </dl>
                     <dl class="row">
-                        <dt class="col-sm-2">Email</dt>
+                        <dt class="col-sm-2 font-weight-bold">Email:</dt>
                         <dd class="col-sm-10">@customer.Email</dd>
                     </dl>
                     <dl class="row">
-                        <dt class="col-sm-2">Phone</dt>
+                        <dt class="col-sm-2 font-weight-bold">Phone:</dt>
                         <dd class="col-sm-10">@customer.Phone</dd>
                     </dl>
                     <dl class="row">
-                        <dt class="col-sm-2">Address</dt>
+                        <dt class="col-sm-2 font-weight-bold">Address:</dt>
                         <dd class="col-sm-10">@customer.Address</dd>
                     </dl>
                     <dl class="row">
-                        <dt class="col-sm-2">City</dt>
+                        <dt class="col-sm-2 font-weight-bold">City:</dt>
                         <dd class="col-sm-10">@customer.City</dd>
                     </dl>
                     <dl class="row">
-                        <dt class="col-sm-2">Status</dt>
+                        <dt class="col-sm-2 font-weight-bold">Status:</dt>
                         <dd class="col-sm-10">@customer.Status</dd>
                     </dl>
                     <dl class="row">
-                        <dt class="col-sm-2">Created</dt>
+                        <dt class="col-sm-2 font-weight-bold">Created:</dt>
                         <dd class="col-sm-10">@customer.Created</dd>
                     </dl>
                     <dl class="row">
-                        <dt class="col-sm-2">Updated</dt>
+                        <dt class="col-sm-2 font-weight-bold">Updated:</dt>
                         <dd class="col-sm-10">@customer.Updated</dd>
                     </dl>
                     <EditForm method="post" Model="customer" OnValidSubmit="DeleteCustomer" FormName="delete" Enhance>
