--- a/pms.app/Components/Pages/CategoryPages/Delete.razor
+++ b/pms.app/Components/Pages/CategoryPages/Delete.razor
@@ -28,19 +28,19 @@
                 else
                 {
                     <dl class="row">
-                        <dt class="col-sm-2">Name:</dt>
+                        <dt class="col-sm-2 font-weight-bold">Name:</dt>
                         <dd class="col-sm-10">@category.Name</dd>
                     </dl>
                     <dl class="row">
-                        <dt class="col-sm-2">Description:</dt>
+                        <dt class="col-sm-2 font-weight-bold">Description:</dt>
                         <dd class="col-sm-10">@category.Description</dd>
                     </dl>
                     <dl class="row">
-                        <dt class="col-sm-2">Created:</dt>
+                        <dt class="col-sm-2 font-weight-bold">Created:</dt>
                         <dd class="col-sm-10">@category.Created</dd>
                     </dl>
                     <dl class="row">
-                        <dt class="col-sm-2">Updated:</dt>
+                        <dt class="col-sm-2 font-weight-bold">Updated:</dt>
                         <dd class="col-sm-10">@category.Updated</dd>
                     </dl>
                     <EditForm method="post" Model="category" OnValidSubmit="DeleteCategory" FormName="delete" Enhance>
