--- a/pms.app/Components/Pages/CategoryPages/Details.razor
+++ b/pms.app/Components/Pages/CategoryPages/Details.razor
@@ -30,12 +30,12 @@
                 else
                 {
                     <dl class="row">
-                        <dt class="col-sm-2">Name:</dt>
+                        <dt class="col-sm-2 font-weight-bold">Name:</dt>
                         <dd class="col-sm-10">@category.Name</dd>
-                        <dt class="col-sm-2">Description:</dt>
+                        <dt class="col-sm-2 font-weight-bold">Description:</dt>
                         <dd class="col-sm-10">@category.Description</dd>
                         <dt class="col-sm-2">Created:</dt>
-                        <dd class="col-sm-10">@category.Created</dd>
+                        <dd class="col-sm-10 font-weight-bold">@category.Created</dd>
                         <dt class="col-sm-2">Updated:</dt>
                         <dd class="col-sm-10">@category.Updated</dd>
                     </dl>
