--- a/pms.app/Components/Pages/CustomerItemPages/Create.razor
+++ b/pms.app/Components/Pages/CustomerItemPages/Create.razor
@@ -26,7 +26,7 @@
                         <ValidationSummary class="text-danger" />
 
                         <div class="mb-3">
-                            <label for="customer" class="form-label">Customer:</label>
+                            <label for="customer" class="form-label font-weight-bold">Customer:</label>
                             <InputSelect id="customer" @bind-Value="CustomerItem.CustomerId" class="form-control">
                                 <option value="0"></option>
                                 @foreach (var customer in Customers)
@@ -38,7 +38,7 @@
                         </div>
 
                         <div class="mb-3">
-                            <label for="item" class="form-label">Item:</label>
+                            <label for="item" class="form-label font-weight-bold">Item:</label>
                             <InputSelect id="item" @bind-Value="CustomerItem.ItemId" class="form-control">
                                 <option value="0"></option>
                                 @foreach (var item in Items)
@@ -50,7 +50,7 @@
                         </div>
 
                         <div class="mb-3">
-                            <label for="quantity" class="form-label">Quantity:</label>
+                            <label for="quantity" class="form-label font-weight-bold">Quantity:</label>
                             <InputNumber id="quantity" @bind-Value="CustomerItem.Quantity" class="form-control" />
                             <ValidationMessage For="() => CustomerItem.Quantity" class="text-danger" />
                         </div>
