--- a/pms.app/Components/Pages/CustomerItemPages/Delete.razor
+++ b/pms.app/Components/Pages/CustomerItemPages/Delete.razor
@@ -28,19 +28,19 @@
                 else
                 {
                     <dl class="row">
-                        <dt class="col-sm-2">Customer Name</dt>
+                        <dt class="col-sm-2 font-weight-bold">Customer Name:</dt>
                         <dd class="col-sm-10">@customeritem.Customer.Name</dd>
                     </dl>
                     <dl class="row">
-                        <dt class="col-sm-2">Item Name</dt>
+                        <dt class="col-sm-2 font-weight-bold">Item Name:</dt>
                         <dd class="col-sm-10">@customeritem.Item.Name</dd>
                     </dl>
                     <dl class="row">
-                        <dt class="col-sm-2">Quantity</dt>
+                        <dt class="col-sm-2 font-weight-bold">Quantity:</dt>
                         <dd class="col-sm-10">@customeritem.Quantity</dd>
                     </dl>
                     <dl class="row">
-                        <dt class="col-sm-2">Assigned Date</dt>
+                        <dt class="col-sm-2 font-weight-bold">Assigned Date:</dt>
                         <dd class="col-sm-10">@customeritem.AssignedDate</dd>
                     </dl>
                     <EditForm method="post" Model="customeritem" OnValidSubmit="DeleteCustomerItem" FormName="delete" Enhance>
