--- a/pms.app/Components/Pages/CustomerItemPages/Details.razor
+++ b/pms.app/Components/Pages/CustomerItemPages/Details.razor
@@ -30,37 +30,37 @@
                     else
                     {
                         <dl class="row">
-                            <dt class="col-sm-2">Customer Name</dt>
-                            <dd class="col-sm-10">@customeritem.Customer.Name</dd>
+                            <dt class="col-sm-2 font-weight-bold">Customer Name:</dt>
+                            <dd class="col-sm-10 ">@customeritem.Customer.Name</dd>
 
-                            <dt class="col-sm-2">Customer Address</dt>
+                            <dt class="col-sm-2 font-weight-bold">Customer Address:</dt>
                             <dd class="col-sm-10">@customeritem.Customer.Address</dd>
 
-                            <dt class="col-sm-2">Customer City</dt>
+                            <dt class="col-sm-2 font-weight-bold">Customer City:</dt>
                             <dd class="col-sm-10">@customeritem.Customer.City</dd>
 
-                            <dt class="col-sm-2">Customer Email</dt>
+                            <dt class="col-sm-2 font-weight-bold">Customer Email:</dt>
                             <dd class="col-sm-10">@customeritem.Customer.Email</dd>
 
-                            <dt class="col-sm-2">Customer Phone</dt>
+                            <dt class="col-sm-2 font-weight-bold">Customer Phone:</dt>
                             <dd class="col-sm-10">@customeritem.Customer.Phone</dd>
 
-                            <dt class="col-sm-2">Quantity</dt>
+                            <dt class="col-sm-2 font-weight-bold">Quantity:</dt>
                             <dd class="col-sm-10">@customeritem.Quantity</dd>
 
-                            <dt class="col-sm-2">Item Number (SKU)</dt>
+                            <dt class="col-sm-2 font-weight-bold">Item Number (SKU):</dt>
                             <dd class="col-sm-10">@customeritem.Item.SKU</dd>
 
-                            <dt class="col-sm-2">Item Name</dt>
+                            <dt class="col-sm-2 font-weight-bold">Item Name:</dt>
                             <dd class="col-sm-10">@customeritem.Item.Name</dd>
 
                             <dt class="col-sm-2">Item Descriton</dt>
                             <dd class="col-sm-10">@customeritem.Item.Description</dd>
 
-                            <dt class="col-sm-2">Item Category</dt>
+                            <dt class="col-sm-2 font-weight-bold">Item Category:</dt>
                             <dd class="col-sm-10">@customeritem.Item.Category?.Name</dd>
 
-                            <dt class="col-sm-2">Assigned Date</dt>
+                            <dt class="col-sm-2 font-weight-bold">Assigned Date:</dt>
                             <dd class="col-sm-10">@customeritem.AssignedDate</dd>
                         </dl>
                         <div>
