--- a/pms.app/Components/Pages/CustomerItemPages/Edit.razor
+++ b/pms.app/Components/Pages/CustomerItemPages/Edit.razor
@@ -32,15 +32,15 @@
                 {
                     <div class="row">
                         <div class="col-md-4">
-                            <p>Customer: @CustomerItem.Customer.Name</p>
-                            <p>Item: @CustomerItem.Item.Name</p>
+                            <p><strong>Customer:</strong> @CustomerItem.Customer.Name</p>
+                            <p><strong>Item:</strong> @CustomerItem.Item.Name</p>
                             <EditForm method="post" Model="CustomerItem" OnValidSubmit="UpdateCustomerItem" FormName="edit" Enhance>
                                 <DataAnnotationsValidator />
                                 <input type="hidden" name="CustomerItem.Id" value="@CustomerItem.Id" />
                                 <ValidationSummary />
 
                                 <div class="mb-3">
-                                    <label for="quantity" class="form-label">Quantity</label>
+                                    <label for="quantity" class="form-label font-weight-bold">Quantity</label>
                                     <InputNumber id="quantity" @bind-Value="@CustomerItem.Quantity" class="form-control" />
                                     <ValidationMessage For="() => CustomerItem.Quantity" class="text-danger" />
                                 </div>
