--- a/pms.app/Components/Pages/CustomerPages/Details.razor
+++ b/pms.app/Components/Pages/CustomerPages/Details.razor
@@ -28,21 +28,21 @@
                 else
                 {
                     <dl class="row">
-                        <dt class="col-sm-2">Name</dt>
+                        <dt class="col-sm-2 font-weight-bold">Name:</dt>
                         <dd class="col-sm-10">@customer.Name</dd>
-                        <dt class="col-sm-2">Email</dt>
+                        <dt class="col-sm-2 font-weight-bold">Email:</dt>
                         <dd class="col-sm-10">@customer.Email</dd>
-                        <dt class="col-sm-2">Phone</dt>
+                        <dt class="col-sm-2 font-weight-bold">Phone:</dt>
                         <dd class="col-sm-10">@customer.Phone</dd>
-                        <dt class="col-sm-2">Address</dt>
+                        <dt class="col-sm-2 font-weight-bold">Address:</dt>
                         <dd class="col-sm-10">@customer.Address</dd>
-                        <dt class="col-sm-2">City</dt>
+                        <dt class="col-sm-2 font-weight-bold">City:</dt>
                         <dd class="col-sm-10">@customer.City</dd>
-                        <dt class="col-sm-2">Status</dt>
+                        <dt class="col-sm-2 font-weight-bold">Status:</dt>
                         <dd class="col-sm-10">@customer.Status</dd>
-                        <dt class="col-sm-2">Created</dt>
+                        <dt class="col-sm-2 font-weight-bold">Created:</dt>
                         <dd class="col-sm-10">@customer.Created</dd>
-                        <dt class="col-sm-2">Updated</dt>
+                        <dt class="col-sm-2 font-weight-bold">Updated:</dt>
                         <dd class="col-sm-10">@customer.Updated</dd>
                     </dl>
 
@@ -83,7 +83,7 @@
                             else
                             {
                                 <tr>
-                                    <td colspan="2">No items assigned to this customer.</td>
+                                    <td colspan="6">No items assigned to this customer.</td>
                                 </tr>
                             }
                         </tbody>
