--- a/pms.app/Components/Pages/ItemPages/Details.razor
+++ b/pms.app/Components/Pages/ItemPages/Details.razor
@@ -27,25 +27,25 @@
                 else
                 {
                     <dl class="row">
-                        <dt class="col-sm-2">Item Number (SKU)</dt>
+                        <dt class="col-sm-2 font-weight-bold">Item Number (SKU):</dt>
                         <dd class="col-sm-10">@item.SKU</dd>
-                        <dt class="col-sm-2">Name</dt>
+                        <dt class="col-sm-2 font-weight-bold">Name:</dt>
                         <dd class="col-sm-10">@item.Name</dd>
-                        <dt class="col-sm-2">Description</dt>
+                        <dt class="col-sm-2 font-weight-bold">Description:</dt>
                         <dd class="col-sm-10">@item.Description</dd>
-                        <dt class="col-sm-2">Price</dt>
+                        <dt class="col-sm-2 font-weight-bold">Price:</dt>
                         <dd class="col-sm-10">@item.Price.ToString("C", CultureInfo.CurrentCulture)</dd>
-                        <dt class="col-sm-2">Status</dt>
+                        <dt class="col-sm-2 font-weight-bold">Status:</dt>
                         <dd class="col-sm-10">@item.Status</dd>
 
                         @if (item.Category != null)
                         {
-                            <dt class="col-sm-2">Category Name </dt>
+                            <dt class="col-sm-2 font-weight-bold">Category Name:</dt>
                             <dd class="col-sm-10">@item.Category.Name</dd>
                         }
-                        <dt class="col-sm-2">Created</dt>
+                        <dt class="col-sm-2 font-weight-bold">Created:</dt>
                         <dd class="col-sm-10">@item.Created</dd>
-                        <dt class="col-sm-2">Updated</dt>
+                        <dt class="col-sm-2 font-weight-bold">Updated:</dt>
                         <dd class="col-sm-10">@item.Updated</dd>
                     </dl>
 
