--- a/pms.app/Components/Pages/CustomerPages/Details.razor
+++ b/pms.app/Components/Pages/CustomerPages/Details.razor
@@ -60,6 +60,7 @@
                                 <th>Price</th>
                                 <th>Status</th>
                                 <th>Date Assinged</th>
+                                <th>Actions</th>
                             </tr>
                         </thead>
                         <tbody>
