--- a/pms.app/Components/Pages/ItemPages/Details.razor
+++ b/pms.app/Components/Pages/ItemPages/Details.razor
@@ -63,6 +63,7 @@
                                 <th>City</th>
                                 <th>Email</th>
                                 <th>Date Assinged</th>
+                                <th>Actions</th>
                             </tr>
                         </thead>
                         <tbody>
