--- a/pms.app/Components/Pages/CategoryPages/Details.razor
+++ b/pms.app/Components/Pages/CategoryPages/Details.razor
@@ -56,6 +56,7 @@
                                 <th>Category</th>
                                 <th>Price</th>
                                 <th>Status</th>
+                                <th>Actions</th>
                             </tr>
                         </thead>
                         <tbody>
