--- a/pms.app/Components/App.razor
+++ b/pms.app/Components/App.razor
@@ -25,6 +25,12 @@
         <script src="js/datatables.js"></script>
         <script src="js/datatables.bootstrap5.js"></script>
 
+
+        <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
+
+        <!-- This is the glue between Blazor and Chart.js -->
+        <script src="_content/ChartJs.Blazor.Fork/ChartJsBlazorInterop.js"></script>
+
         <script src="js/app.js"></script>
     </footer>
 </body>
