--- a/pms.app/Components/Pages/Dashboard.razor
+++ b/pms.app/Components/Pages/Dashboard.razor
@@ -34,7 +34,6 @@
     </div>
 
     <div class="card-body">
-
         <div class="row">
 
             <div class="row">
@@ -53,10 +52,7 @@
                 <Chart Config="_customerItemConfig"></Chart>
             </div>
         </div>
-
-
     </div>
-
 </div>
 
 @code {
@@ -183,7 +179,7 @@
                     Title = new OptionsTitle
                     {
                         Display = true,
-                        Text = "Items per category"
+                        Text = "Items Per Category"
                     }
                 }
             };
@@ -213,7 +209,7 @@
                     Title = new OptionsTitle
                     {
                         Display = true,
-                        Text = "Distribution of quantities across different items"
+                        Text = "Distribution of Quantities Across Different Items"
                     }
                 }
             };
