--- a/pms.app/Components/Layout/NavMenu.razor
+++ b/pms.app/Components/Layout/NavMenu.razor
@@ -4,7 +4,7 @@
 
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">pms.app</a>
+        <a class="navbar-brand" href="">PMS App</a>
     </div>
 </div>
 
